# locale-match

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: bcp47.rs  lib.rs  main.rs  posix.rs
