[package]
name = "RustProjectTemplate"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

exclude = [
	"/.forgejo/",
	"/.github/",
	"/.gitlab/",
	"/.idea/",
	"/.vscode/",
	"/doc/",
	"/docs/",
	"/example/",
	"/examples/",
	"/test/",
	"/tests/",
	"/.editorconfig",
	"/.gitignore",
	"/.rustfmt.toml",
	"/rustfmt.toml"
]

[profile.dev]
# Compilation
codegen-units = 256
incremental = true
# Behavior
overflow-checks = true
panic = "unwind"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = true
strip = "none"

[profile.fastcompile]
inherits = "dev"
# Compilation
codegen-units = 8192
incremental = true
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = false
strip = "none"

[profile.release]
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 3
lto = true
# Symbols
debug = false
strip = "symbols"

[profile.relwithdebinfo]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "unwind"
# Optimization
opt-level = 2
lto = true
# Symbols
debug = true
strip = "none"

[profile.minsize]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = "z"
lto = true
# Symbols
debug = false
strip = "symbols"