[package]
name = "locale-match"
version = "0.2.3"
authors = ["Petr Aleksandrovich Sabanov <pasabanov@murena.io>"]
edition = "2021"
description = "A small library for selecting the best match for user's preferred locales from available locales."
repository = "https://github.com/pasabanov/locale-match"
license = "LGPL-3.0-or-later"
keywords = ["locale", "i18n", "internationalization", "l10n", "localization"]
categories = ["internationalization", "localization"]

exclude = [
	"/.forgejo/",
	"/.github/",
	"/.gitlab/",
	"/.idea/",
	"/.vscode/",
	"/doc/",
	"/docs/",
	"/example/",
	"/examples/",
	"/test/",
	"/tests/",
	"/.editorconfig",
	"/.gitattributes",
	"/.gitignore",
	"/.gitmodules",
	"/.rustfmt.toml",
	"/rustfmt.toml",
]

[dependencies]
language-tags = { version = "0.3.2", optional = true }

[features]
bcp47 = ["language-tags"]
posix = []
default = ["bcp47", "posix"]

[profile.dev]
# Compilation
codegen-units = 256
incremental = true
# Behavior
overflow-checks = true
panic = "unwind"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = true
strip = "none"

[profile.fastbuild]
inherits = "dev"
# Compilation
codegen-units = 8192
incremental = true
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 0
lto = false
# Symbols
debug = false
strip = "none"

[profile.release]
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = 3
lto = true
# Symbols
debug = false
strip = "symbols"

[profile.relwithdebinfo]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "unwind"
# Optimization
opt-level = 2
lto = true
# Symbols
debug = true
strip = "none"

[profile.minsize]
inherits = "release"
# Compilation
codegen-units = 1
incremental = false
# Behavior
overflow-checks = false
panic = "abort"
# Optimization
opt-level = "z"
lto = true
# Symbols
debug = false
strip = "symbols"